--- a/notebooks/brain_tumor_training_google_collab.ipynb
+++ b/notebooks/brain_tumor_training_google_collab.ipynb
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "6d366cb8",
       "metadata": {
         "id": "6d366cb8"
@@ -508,7 +508,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Class labels\n",
-        "class_labels = ['pituitary', 'glioma', 'notumor', 'meningioma']\n",
+        "class_labels = ['glioma', 'pituitary',  'notumor', 'meningioma']\n",
         "\n",
         "def detect_and_display(img_path, model, image_size=128):\n",
         "    \"\"\"\n",
